# house-valuations

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/adapters/property_adapters/: base_property_adapter.py  provider_1.py  provider_2.py
backend/app/api/v1/: routers.py
backend/app/api/v1/endpoints/: house_valuations.py
backend/app/clients/: base_request_client.py  request_client.py
backend/app/core/: config.py
backend/app/schemas/: property_schema.py
backend/app/schemas/api/: get_house_valuations_request.py
backend/app/schemas/properties/: property_schema.py  provider_1_property_schema.py  provider_2_property_schema.py
backend/app/use_cases/: get_house_valuations_use_case.py
backend/scripts/: tests.sh
backend/tests/mocks/: provider_1_response.json  provider_2_response.json
backend/tests/use_cases/: test_get_house_valuations_use_case.py
frontend/: .env.example  .eslintrc.cjs  README.md  package-lock.json  package.json
frontend/house-valuations/: package.json
frontend/src/: main.tsx
frontend/src/api/houseValuations/: houseValuations.ts
frontend/src/common/components/: index.ts
frontend/src/common/components/Table/Table/: Table.tsx
frontend/src/components/SearchProperty/: SearchProperty.tsx
frontend/src/components/Table/: Table.tsx
frontend/src/components/Table/TableCell/: TableCell.tsx
frontend/src/components/Table/TableHead/: TableHead.tsx
frontend/src/hooks/: useGetHouseValuationsForAddress.ts
frontend/src/router/: router.tsx
(+5 files in other folders)
